[gd_scene load_steps=8 format=3 uid="uid://53c0unc20bws"]

[ext_resource type="Script" path="res://src/champions/PlayerRpc.gd" id="1_dh0cx"]
[ext_resource type="PackedScene" uid="uid://cmrhda4lpqeol" path="res://src/champions/Rain/Models/stylized_character.tscn" id="3_jll1h"]
[ext_resource type="PackedScene" uid="uid://h60aqkr44qp" path="res://src/ui/floatgui.tscn" id="4_dwc15"]
[ext_resource type="Script" path="res://src/champions/MultiplayerSpawner.gd" id="5_q1t4l"]
[ext_resource type="PackedScene" uid="uid://d1csfuqtlnlve" path="res://src/champions/projectile.tscn" id="6_pmf2v"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_bwobq"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath(".:moving")
properties/1/spawn = true
properties/1/sync = false
properties/1/watch = true
properties/2/path = NodePath(".:channel")
properties/2/spawn = true
properties/2/sync = false
properties/2/watch = true
properties/3/path = NodePath(".:destination")
properties/3/spawn = true
properties/3/sync = false
properties/3/watch = true
properties/4/path = NodePath(".:currentHealth")
properties/4/spawn = true
properties/4/sync = false
properties/4/watch = true
properties/5/path = NodePath(".:maxHealth")
properties/5/spawn = true
properties/5/sync = false
properties/5/watch = true
properties/6/path = NodePath(".:stunned")
properties/6/spawn = true
properties/6/sync = false
properties/6/watch = true
properties/7/path = NodePath(".:rotation")
properties/7/spawn = true
properties/7/sync = true
properties/7/watch = false

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_885ba"]

[node name="Champion" type="CharacterBody3D"]
script = ExtResource("1_dh0cx")

[node name="StylizedCharacter" parent="." instance=ExtResource("3_jll1h")]

[node name="FloatGUI" parent="." instance=ExtResource("4_dwc15")]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_bwobq")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")
script = ExtResource("5_q1t4l")
projectile = ExtResource("6_pmf2v")

[node name="A1" type="Node3D" parent="."]

[node name="A2" type="Node3D" parent="."]

[node name="A3" type="Node3D" parent="."]

[node name="A4" type="Node3D" parent="."]

[node name="AA" type="Node3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_885ba")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="despawned" from="MultiplayerSpawner" to="MultiplayerSpawner" method="_on_despawned"]
